--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-torchvision==0.2.2.post3
-tqdm==4.32.2
 torch==1.1.0
-matplotlib==3.1.0
+adabound==0.0.5
+pycocotools==2.0
 numpy==1.16.3
+tqdm==4.32.2
+matplotlib==3.1.0
+torchvision==0.2.2.post3
+plotly==4.3.0
+terminaltables==3.1.0
 visdom==0.1.8.8
 Pillow==6.2.1
